# cshell

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  flake.nix  shell.nix
.github/: CONTRIBUTING.md
.github/workflows/: release.yml  test.yml
.sqlite/wallets/: cshell.db
docs/: examples.mdx  explorer.mdx  index.mdx  provider.mdx  usage.mdx  wallet.mdx
docs/commands/: _meta.yml  search.mdx  tx.mdx
docs/explorer/: _meta.yml  index.mdx
docs/provider/: _meta.yml  create.mdx  delete.mdx  edit.mdx  info.mdx  list.mdx  test.mdx
docs/search/: _meta.yml  block.mdx  transaction.mdx
docs/tx/: _meta.yml  invoke.mdx  resolve.mdx  sign.mdx  submit.mdx
docs/wallet/: _meta.yml  balance.mdx  create.mdx  delete.mdx  edit.mdx  import.mdx  info.mdx  list.mdx  restore.mdx
entity/: Cargo.toml
entity/src/: block_history.rs  lib.rs  mod.rs  prelude.rs  protocol_parameters.rs  recent_points.rs  transaction.rs  tx_history.rs  utxo.rs
examples/: README.md  mint_token.tx3  mint_with_script.tx3  transfer.tx3  utxo_consolidate.tx3  utxo_split.tx3
examples/batch-transactions/: transfer.sh  transfer.tx3
examples/complex-transaction/: asteria.tx3  create-ship.sh
examples/scheduled-tasks/: transfer.sh
migration/: Cargo.toml
migration/src/: lib.rs  m20240514_000001_create_utxo_table.rs  m20240514_000002_create_history_table.rs  m20240514_000003_create_block_table.rs  m20240514_000004_create_intersects_table.rs  m20240514_000006_create_transactions_table.rs
src/: dirs.rs  main.rs  output.rs  reports.rs  store.rs  types.rs  utils.rs
src/chain/: dump.rs  follow_tip.rs  get_block.rs  mod.rs  utils.rs
src/configure/: mod.rs
src/explorer/: event.rs  mod.rs  tabs.rs
src/explorer/widgets/: accounts_tab.rs  activity.rs  blocks_tab.rs  footer.rs  header.rs  help.rs  mod.rs  transactions_tab.rs
src/explorer/widgets/popups/: help.rs  mod.rs  new_address.rs
src/explorer/widgets/tabs/: accounts.rs  blocks.rs  mod.rs  transactions.rs
src/provider/: create.rs  delete.rs  edit.rs  info.rs  list.rs  mod.rs  test.rs  types.rs  utxorpc.rs
src/search/: block.rs  mod.rs  transaction.rs
src/transaction/: mod.rs  new.rs  resolve.rs  sign.rs  submit.rs
src/tx/: common.rs  construct.rs  invoke.rs  mod.rs  resolve.rs  sign.rs  submit.rs
src/tx/construct/: add_input.rs  add_output.rs  build.rs  common.rs  mod.rs  wizard.rs
src/utxorpc/: config.rs  create.rs  delete.rs  dump.rs  edit.rs  follow_tip.rs  get_block.rs  info.rs  list.rs  mod.rs
src/wallet/: balance.rs  block_history.rs  config.rs  create.rs  delete.rs  edit.rs  history.rs  import.rs  info.rs  list.rs  mod.rs  restore.rs  sync.rs  transactions.rs  types.rs  update.rs  utxos.rs
src/wallet/create/: mod.rs
src/wallet/dal/: mod.rs  types.rs
test/: integration.sh
tests/fixtures/: invoke.tii
